objects/ssot__FulfillmentStepDependency__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DependentStepId__c</fullName>
        <label>Dependent Step</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DependsOnStepId__c</fullName>
        <label>Depends On Step</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Fulfillment Step Dependency Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1718546692207_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FulfillmentStepDependency_DependsOnS_rel</label>
        <referenceTo>ssot__FulfillmentStep__dlm</referenceTo>
        <relationshipLabel>FulfillmentStepDependency_DependsOnS_rel</relationshipLabel>
        <relationshipName>rel_1718546692207_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1718546694491_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FulfillmentStepDependency_DependentS_rel</label>
        <referenceTo>ssot__FulfillmentStep__dlm</referenceTo>
        <relationshipLabel>FulfillmentStepDependency_DependentS_rel</relationshipLabel>
        <relationshipName>rel_1718546694491_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>